--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>5.3.1</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <!--Junit - движок для тестов -->
         <dependency>
