--- a/src/test/resources/url.properties
+++ b/src/test/resources/url.properties
@@ -1,1 +1,2 @@
 add_remove_url = http://the-internet.herokuapp.com/add_remove_elements/
+basic_auth_url = http://the-internet.herokuapp.com/basic_auth/
