practice_form.feature : Feature + Scenario url.properties: add reg_form url

--- a/src/test/resources/url.properties
+++ b/src/test/resources/url.properties
@@ -1,2 +1,4 @@
 add_remove_url = http://the-internet.herokuapp.com/add_remove_elements/
 basic_auth_url = http://the-internet.herokuapp.com/basic_auth/
+##demoqa.com
+reg_form_url = https://demoqa.com/automation-practice-form
