--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,23 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <!--versions -->
         <junit-jupiter-engine.version>5.9.0</junit-jupiter-engine.version>
-        <cucumber.version>7.5.0</cucumber.version>
+        <cucumber.version>7.10.1</cucumber.version>
     </properties>
 
     <dependencies>
+
         <!--Selenium для тестирования UI -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.6.0</version>
         </dependency>
+
         <!--WebDriverManager для автоматического поиска веб драйвера любого браузера  -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
@@ -30,6 +33,7 @@
             <version>5.3.1</version>
             <scope>compile</scope>
         </dependency>
+
         <!--Junit - движок для тестов -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -37,6 +41,7 @@
             <version>${junit-jupiter-engine.version}</version>
             <scope>test</scope>
         </dependency>
+
         <!-- Cucumber - BDD тесты -->
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -44,22 +49,20 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--Интеграция Cucumber с Junit 5 -->
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit-platform-engine</artifactId>
-            <version>${cucumber.version}</version>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
+        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
                 <!--Для управления запуском тестов -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>2.22.0</version>
                 <configuration>
                     <properties>
                         <configurationParameters>
@@ -67,6 +70,16 @@
                         </configurationParameters>
                     </properties>
                 </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <!--Для управления запуском тестов -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+
                 <dependencies>
                     <!--Чтобы Junit работал с плагином -->
                     <dependency>
