--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--Junit - движок для тестов -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
