--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Автогенерация геттеров и сеттеров -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
