htmlElements by yandex dependency (Requires old selenium version 3... instead of 4.7.1)

--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,19 @@
 
     <dependencies>
 
-        <!--Selenium для тестирования UI -->
+        <!-- WebElement Wrapper -->
+        <dependency>
+            <groupId>ru.yandex.qatools.htmlelements</groupId>
+            <artifactId>htmlelements-all</artifactId>
+            <version>1.20.0</version>
+        </dependency>
+
+        <!--Selenium для тестирования UI
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.7.1</version>
-        </dependency>
+        </dependency> -->
 
         <!--WebDriverManager для автоматического поиска веб драйвера любого браузера  -->
         <dependency>
