--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <!--versions -->
         <junit-jupiter-engine.version>5.9.0</junit-jupiter-engine.version>
         <cucumber.version>7.10.1</cucumber.version>
+        <aspectj.version>1.8.10</aspectj.version>
     </properties>
 
     <dependencies>
@@ -81,6 +82,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!--Генерация отчётов Allure -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>2.20.1</version>
+        </dependency>
+
         <!-- Автогенерация геттеров и сеттеров -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -104,12 +112,40 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
+                    <!--путь для генерации отчётов-->
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                        <allure.link.issue.pattern>https://example.org/browse/{}</allure.link.issue.pattern>
+                        <allure.link.tms.pattern>https://example.org/browse/{}</allure.link.tms.pattern>
+                    </systemPropertyVariables>
+                    <!--строка аргументов для генерации Аллюр по шагам Cucumber-->
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        -Dcucumber.options="--plugin io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
+                    </argLine>
                     <properties>
                         <configurationParameters>
                             cucumber.junit-platform.naming-strategy=long
                         </configurationParameters>
                     </properties>
                 </configuration>
+                    <dependencies>
+                        <!--плагин для генерации отчётов Аллюр-->
+                        <dependency>
+                            <groupId>org.aspectj</groupId>
+                            <artifactId>aspectjweaver</artifactId>
+                            <version>${aspectj.version}</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>io.qameta.allure</groupId>
+                    <artifactId>allure-maven</artifactId>
+                    <version>2.8</version>
+                    <configuration>
+                        <propertiesFilePath>allure.properties</propertiesFilePath>
+                        <reportDirectory>allure-report</reportDirectory>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -133,6 +169,10 @@
                         <version>${junit-jupiter-engine.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
             </plugin>
         </plugins>
     </build>
