--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <!--versions -->
         <junit-jupiter-engine.version>5.9.1</junit-jupiter-engine.version>
-        <cucumber.version>7.10.1</cucumber.version>
+        <cucumber.version>7.8.1</cucumber.version>
         <aspectj.version>1.8.10</aspectj.version>
     </properties>
 
@@ -47,14 +48,6 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>2.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!--Аллюр для JUnit5-->
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-junit5</artifactId>
-            <version>2.20.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -96,6 +89,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Allure для кукумбера-->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>2.20.1</version>
+        </dependency>
 
     </dependencies>
 
@@ -117,6 +116,7 @@
                         <testFailureIgnore>false</testFailureIgnore>
                         <argLine>
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                            -Dcucumber.options="--plugin io.qameta.allure.cucumber7jvm.AllureCucumber7Jvm"
                         </argLine>
                         <systemProperties>
                             <property>
