--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     </properties>
 
     <dependencies>
+        <!--RestAssured для тестирования рест апи -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+        </dependency>
 
         <!-- WebElement Wrapper -->
         <dependency>
